--- a/WindowsFormsBoat.csproj
+++ b/WindowsFormsBoat.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Boat.cs" />
-    <Compile Include="enum.cs" />
+    <Compile Include="Direction.cs" />
     <Compile Include="FormBoat.cs">
       <SubType>Form</SubType>
     </Compile>
