--- a/WindowsFormsBoat.csproj
+++ b/WindowsFormsBoat.csproj
@@ -65,7 +65,7 @@
     <Compile Include="ITransport.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Vessel.cs" />
+    <Compile Include="Transport.cs" />
     <EmbeddedResource Include="FormVessel.resx">
       <DependentUpon>FormVessel.cs</DependentUpon>
     </EmbeddedResource>
