Переименовал enum.cs в Direction.cs

--- a/WindowsFormsBoat.csproj
+++ b/WindowsFormsBoat.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="Boat.cs" />
     <Compile Include="SailBoat.cs" />
-    <Compile Include="enum.cs" />
+    <Compile Include="Direction.cs" />
     <Compile Include="FormVessel.cs">
       <SubType>Form</SubType>
     </Compile>
