--- a/WindowsFormsBoat.csproj
+++ b/WindowsFormsBoat.csproj
@@ -82,7 +82,7 @@
     <Compile Include="ITransport.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transport.cs" />
+    <Compile Include="Vehicle.cs" />
     <EmbeddedResource Include="FormBoatConfig.resx">
       <DependentUpon>FormBoatConfig.cs</DependentUpon>
     </EmbeddedResource>
