--- a/WindowsFormsBoat.csproj
+++ b/WindowsFormsBoat.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Boat.cs" />
+    <Compile Include="BoatComparer.cs" />
     <Compile Include="FormBoatConfig.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +69,7 @@
       <DependentUpon>FormHarbor.cs</DependentUpon>
     </Compile>
     <Compile Include="Harbor.cs" />
+    <Compile Include="HarborAlreadyHaveException.cs" />
     <Compile Include="HarborCollection.cs" />
     <Compile Include="HarborNotFoundException.cs" />
     <Compile Include="HarborOverflowException.cs" />
@@ -88,6 +90,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormBoat.resx">
       <DependentUpon>FormBoat.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FormHarbor.resx">
       <DependentUpon>FormHarbor.cs</DependentUpon>
